workspace_cov.txt
info: cargo-llvm-cov currently setting cfg(coverage); you can opt-out it by passing --no-cfg-coverage
   Compiling astraweave-ecs v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-ecs)
   Compiling astraweave-behavior v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-behavior)
   Compiling astraweave-core v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-core)
   Compiling astraweave-nav v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-nav)
   Compiling astraweave-observability v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-observability)
   Compiling astraweave-physics v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-physics)
   Compiling astraweave-asset v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-asset)
   Compiling astraweave-input v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-input)
   Compiling astraweave-llm v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-llm)
   Compiling astraweave-cinematics v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-cinematics)
   Compiling asset_signing v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\tools\asset_signing)
   Compiling astraweave-scene v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-scene)
   Compiling astraweave-gameplay v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-gameplay)
   Compiling aw_asset_cli v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\tools\aw_asset_cli)
   Compiling astraweave-materials v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-materials)
   Compiling astraweave-prompts v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-prompts)
   Compiling astraweave-ai v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-ai)
   Compiling astraweave-terrain v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-terrain)
   Compiling astraweave-context v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-context)
   Compiling astraweave-embeddings v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-embeddings)
   Compiling astraweave-render v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-render)
   Compiling astraweave-rag v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-rag)
   Compiling astraweave-security v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-security)
   Compiling astraweave-memory v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-memory)
   Compiling astraweave-persona v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-persona)
   Compiling astraweave-audio v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-audio)
   Compiling astract-macro v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\crates\astract\astract-macro)
   Compiling astraweave-dialogue v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-dialogue)
   Compiling astraweave-author v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-author)
   Compiling astract v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\crates\astract)
   Compiling astraweave-quests v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-quests)
   Compiling astraweave-profiling v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-profiling)
   Compiling astraweave-ui v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-ui)
   Compiling aw_editor v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\tools\aw_editor)
warning: unnecessary parentheses around block return value
    --> tools\aw_editor\src\tab_viewer.rs:1669:66
     |
1669 |                         let pct = if stats.frame_time_ms > 0.0 { (time / stats.frame_time_ms * 100.0) } else { 0.0 };
     |                                                                  ^                                  ^
     |
     = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
     |
1669 -                         let pct = if stats.frame_time_ms > 0.0 { (time / stats.frame_time_ms * 100.0) } else { 0.0 };
1669 +                         let pct = if stats.frame_time_ms > 0.0 { time / stats.frame_time_ms * 100.0 } else { 0.0 };
     |

   Compiling aw-save v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\persistence\aw-save)
   Compiling astraweave-net v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-net)
   Compiling astraweave-pcg v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-pcg)
error[E0500]: closure requires unique access to `*self` but it is already borrowed
    --> tools\aw_editor\src\tab_viewer.rs:1415:31
     |
1412 |                 let stats = &self.scene_stats;
     |                             ----------------- borrow occurs here
...
1415 |                 ui.horizontal(|ui| {
     |                               ^^^^ closure construction occurs here
...
1422 |                             self.emit_event(PanelEvent::RefreshSceneStats);
     |                             ---- second borrow occurs due to use of `*self` in closure
...
1432 |                         ui.strong(format!("{}", stats.total_entities));
     |                                                 -------------------- first borrow later captured here by closure

   Compiling astraweave-weaving v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-weaving)
   Compiling astraweave-assets v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\tools\astraweave-assets)
For more information about this error, try `rustc --explain E0500`.
warning: `aw_editor` (lib) generated 1 warning
error: could not compile `aw_editor` (lib) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
error: process didn't exit successfully: `C:\Users\pv2br\.rustup\toolchains\1.89.0-x86_64-pc-windows-msvc\bin\cargo.exe test --tests --manifest-path C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\Cargo.toml --target-dir C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\target\llvm-cov-target --workspace` (exit code: 101)
